--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -233,4 +233,16 @@
     <string name="close_btn">Cerrar</string>
     <string name="libraries">Llibreries Codi Obert:</string>
     <string name="license_btn">Llicència</string>
+    <string name="all_data_deleted_msg">Dades eliminades!</string>
+    <string name="loading_msg">Carregant…</string>
+    <string name="pref_data_cat_label">Dades</string>
+    <string name="pref_delete_all_data_desc">PERILL! S\'eliminaran totes les dades.</string>
+    <string name="pref_delete_all_data_label">Esborrar totes les dades</string>
+    <string name="pref_generate_sample_data_desc">Es crearà un abellar de mostra.</string>
+    <string name="pref_generate_sample_data_label">Generar dades de mostra</string>
+    <string name="sample_apiary_name">Abellar de mostra</string>
+    <string name="sample_data_generated_msg">Abellar de mostra creat!</string>
+    <string name="sample_hive_name">Rusc #<xliff:g id="temp">%1$d</xliff:g></string>
+    <string name="sample_hive_notes">Comprovar si té varroa.</string>
+    <string name="sample_apiary_notes">Treure dues caixes i dues tapes.\nL\' abeurador està gairebé buit.\nTreure les vacunes el dilluns que ve.</string>
 </resources>
