--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,8 @@
     <string name="permission_request_deny_button">DENY</string>
     <!-- Message when user doesn't grant permission [CHAR LIMIT=100] -->
     <string name="permission_request_denied">The app does not have permissions to use this feature.</string>
+    <!-- Loading message [CHAR LIMIT=100] -->
+    <string name="loading_msg">Loading…</string>
 
 
     <!--+++++++++-->
@@ -521,6 +523,27 @@
     <string name="pref_weather_units_metric" translatable="false">metric</string>
     <!-- Value in SharedPreferences for imperial weather unit option [CHAR LIMIT=NONE] -->
     <string name="pref_weather_units_imperial" translatable="false">imperial</string>
+    <!-- Label for data category [CHAR LIMIT=30] -->
+
+    <string name="pref_data_cat_label">Data</string>
+    <!-- Key name for data category in SharedPreferences [CHAR LIMIT=NONE] -->
+    <string name="pref_data_cat_key" translatable="false">data</string>
+    <!-- Label for Generate sample data preference [CHAR LIMIT=25] -->
+    <string name="pref_generate_sample_data_label">Generate sample data</string>
+    <!-- Key name for Generate sample data preference [CHAR LIMIT=NONE] -->
+    <string name="pref_generate_sample_data_key" translatable="false">generateData</string>
+    <!-- Description for Generate sample data preference [CHAR LIMIT=25] -->
+    <string name="pref_generate_sample_data_desc">A sample apiary will be created.</string>
+    <!-- Data generated successfully message [CHAR LIMIT=100] -->
+    <string name="sample_data_generated_msg">Sample apiary created!</string>
+    <!-- Label for Delete all data preference [CHAR LIMIT=30] -->
+    <string name="pref_delete_all_data_label">Delete all data</string>
+    <!-- Key name for Delete all data preference [CHAR LIMIT=NONE] -->
+    <string name="pref_delete_all_data_key" translatable="false">deleteData</string>
+    <!-- Description for Delete all data preference [CHAR LIMIT=30] -->
+    <string name="pref_delete_all_data_desc">WARNING! All data will be deleted.</string>
+    <!-- Data deleted successfully message [CHAR LIMIT=100] -->
+    <string name="all_data_deleted_msg">Data deleted!</string>
 
 
     <!--+++++++++++++++++++++-->
@@ -809,4 +832,18 @@
         <p>The GNU General Public License does not permit incorporating your program into proprietary programs. If your program is a subroutine library, you may consider it more useful to permit linking proprietary applications with the library. If this is what you want to do, use the GNU Lesser General Public License instead of this License. But first, please read <http://www.gnu.org/philosophy/why-not-lgpl.html>. </p>
         ]]>
     </string>
+
+
+    <!--+++++++++++++++++++++-->
+    <!-- Generate random data-->
+    <!--+++++++++++++++++++++-->
+
+    <!-- Sample apiary name [CHAR LIMIT=30] -->
+    <string name="sample_apiary_name">Sample apiary</string>
+    <!-- Sample apiary notes [CHAR LIMIT=30] -->
+    <string name="sample_apiary_notes">Bring two hive bodies and two covers.\nWater dispenser is almost empty.\nRemove vaccines next Monday.</string>
+    <!-- Sample hive name [CHAR LIMIT=30] -->
+    <string name="sample_hive_name">Hive #<xliff:g id="temp">%1$d</xliff:g></string>
+    <!-- Sample hive notes [CHAR LIMIT=30] -->
+    <string name="sample_hive_notes">Check if it has varroa.</string>
 </resources>
