--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -43,3 +43,33 @@
 	url = {http://www.seg-social.es/Internet_1/Trabajadores/CotizacionRecaudaci10777/Basesytiposdecotiza36537/index.htm},
 	note = "[Online; Accedido 20-Enero-2017]"
 }
+
+@misc{ pattern:mvp,
+    author = "Martin Fowler",
+	title = {GUI Architectures - MVC and MVP},
+    year = "2006",
+	url = {https://martinfowler.com/eaaDev/uiArchs.html},
+	note = "[Online; Accedido 22-Enero-2017]"
+}
+
+@misc{ pattern:repository,
+    author = "Martin Fowler, Edward Hieatt y Rob Mee",
+	title = {Repository Pattern},
+	url = {https://martinfowler.com/eaaCatalog/repository.html},
+	note = "[Online; Accedido 22-Enero-2017]"
+}
+
+@misc{ pattern:android_architecture,
+    author = "Jose Alcérreca, Stephan Linzner y Mustafa Kurtuldu",
+	title = {Google en Android Architecture Blueprints},
+	url = {https://github.com/googlesamples/android-architecture},
+	note = "[Online; Accedido 22-Enero-2017]"
+}
+
+@misc{ wiki:injection,
+    author = "Wikipedia",
+    title = "Dependency injection --- Wikipedia{,} The Free Encyclopedia",
+    year = "2016",
+    url = {https://en.wikipedia.org/w/index.php?title=Dependency_injection&oldid=761366923},
+    note = "[Online; Accedido 07-Enero-2017]"
+}
