--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -73,3 +73,12 @@
     url = {https://en.wikipedia.org/w/index.php?title=Dependency_injection&oldid=761366923},
     note = "[Online; Accedido 07-Enero-2017]"
 }
+
+@misc{ design:material,
+    author = "Google",
+	title = {Material design guidelines},
+    year = "2014",
+	url = {https://material.io/guidelines/},
+	note = "[Online; Accedido 24-Enero-2017]"
+}
+
