Convert to latex points 1 and 2 #124

--- a/docs/latex/memoria.tex
+++ b/docs/latex/memoria.tex
@@ -11,6 +11,9 @@
 \RequirePackage{xtab}
 \RequirePackage{multirow}
 
+% Bibliography management
+\usepackage[numbers,sort]{natbib}
+
 % Links
 \usepackage[colorlinks]{hyperref}
 \hypersetup{
@@ -285,7 +288,7 @@
 
 
 
-\graphicspath{ {./img/} }
+\graphicspath{ {../img/} }
 
 % Capítulos
 \chapterstyle{bianchi}
