--- a/docs/latex/tex/2_Objetivos_del_proyecto.tex
+++ b/docs/latex/tex/2_Objetivos_del_proyecto.tex
@@ -1,3 +1,78 @@
 \capitulo{2}{Objetivos del proyecto}
 
-Este apartado explica de forma precisa y concisa cuales son los objetivos que se persiguen con la realización del proyecto. Se puede distinguir entre los objetivos marcados por los requisitos del software a construir y los objetivos de carácter técnico que plantea a la hora de llevar a la práctica el proyecto.
+A continuación, se detallan los diferentes objetivos que han motivado la
+realización del proyecto.
+
+\section{Objetivos generales}\label{objetivos-generales}
+
+\begin{itemize}
+\tightlist
+\item
+  Desarrollar una aplicación para \emph{smartphone} que permita la
+  monitorización de la actividad de vuelo de una colmena a través de su
+  cámara.
+\item
+  Facilitar la interpretación de los datos recogidos mediante
+  representaciones gráficas.
+\item
+  Aportar información extra a los datos de actividad que ayude en la
+  toma de decisiones.
+\item
+  Almacenar todos los datos generados de forma estructurada y fácilmente
+  accesible.
+\end{itemize}
+
+\section{Objetivos técnicos}\label{objetivos-tecnicos}
+
+\begin{itemize}
+\tightlist
+\item
+  Desarrollar un algoritmo de visión artificial con OpenCV que permita
+  contar el número de abejas en cada fotograma en tiempo real.
+\item
+  Desarrollar una aplicación Android con soporte para API 19 y
+  superiores.
+\item
+  Aplicar la arquitectura MVP (\emph{Model-View-Presenter}) en el
+  desarrollo de la aplicación.
+\item
+  Utilizar Gradle como herramienta para automatizar el proceso de
+  construcción de software.
+\item
+  Utilizar Git como sistema de control de versiones distribuido junto
+  con la plataforma GitHub.
+\item
+  Hacer uso de herramientas de integración continua como Travis,
+  Codecov, Code Climate, SonarQube o VersionEye en el repositorio.
+\item
+  Aplicar la metodología ágil Scrum junto con TDD (\emph{Test Driven
+  Development}) en el desarrollo del software.
+\item
+  Realizar test unitarios, de integración y de interfaz.
+\item
+  Utilizar ZenHub como herramienta de gestión de proyectos.
+\item
+  Utilizar un sistema de documentación continua como Read the Docs.
+\item
+  Distribuir la aplicación resultante en la plataforma Google Play.
+\item
+  Realizar una página web para la difusión de la aplicación.
+\end{itemize}
+
+\section{Objetivos personales}\label{objetivos-personales}
+
+\begin{itemize}
+\tightlist
+\item
+  Realizar una aportación a la modernización de la apicultura.
+\item
+  Abarcar el máximo número de conocimientos adquiridos durante la
+  carrera.
+\item
+  Explorar metodologías y herramientas novedosas utilizadas en el
+  mercado laboral.
+\item
+  Adentrarme en el campo de la visión artificial.
+\item
+  Profundizar en el desarrollo de aplicaciones Android.
+\end{itemize}
