--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -334,3 +334,36 @@
     url = {http://docs.opencv.org/3.0-beta/doc/py_tutorials/py_imgproc/py_contours/py_table_of_contents_contours/py_table_of_contents_contours.html},
     note = "[Online; Accedido 19-Octubre-2016]"
 }
+
+@misc{ gobees:web,
+    author = "David Miguel Lozano",
+    title = "Sitio web de GoBees",
+    year = "2016",
+    url = {http://gobees.io/},
+    note = "[Online; Accedido 25-Enero-2017]"
+}
+
+@misc{ gobees:repo,
+    author = "David Miguel Lozano",
+    title = "Repositorio de GoBees en GitHub",
+    year = "2016",
+    url = {https://github.com/davidmigloz/go-bees/},
+    note = "[Online; Accedido 25-Enero-2017]"
+}
+
+@misc{ gobees:play,
+    author = "David Miguel Lozano",
+    title = "GoBees en Google Play",
+    year = "2016",
+    url = {https://play.google.com/store/apps/details?id=com.davidmiguel.gobees},
+    note = "[Online; Accedido 25-Enero-2017]"
+}
+
+@misc{ gobees:prototipes,
+    author = "David Miguel Lozano",
+    title = "Repositorio de las herramientas desarrolladas para GoBees en GitHub",
+    year = "2016",
+    url = {https://github.com/davidmigloz/go-bees-prototypes},
+    note = "[Online; Accedido 25-Enero-2017]"
+}
+
