Convert to latex point 3 #124

--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -156,7 +156,7 @@
     author = "Wikipedia",
     title = "Background subtraction --- Wikipedia{,} The Free Encyclopedia",
     year = "2016",
-    url = {https://en.wikipedia.org/w/index.php?title=Background_subtraction&oldid=741230478},
+    url = {https://en.wikipedia.org/w/index.php?title=Background\_subtraction&oldid=741230478},
     note = "[Online; Accedido 23-Septiembre-2016]"
 }
  
@@ -164,7 +164,7 @@
     author = "OpenCV",
     title = "OpenCV Background Subtraction tutorial",
     year = "2016",
-    url = {http://docs.opencv.org/master/db/d5c/tutorial_py_bg_subtraction.html},
+    url = {http://docs.opencv.org/master/db/d5c/tutorial\_py\_bg\_subtraction.html},
     note = "[Online; Accedido 26-Septiembre-2016]"
 }
 
@@ -263,17 +263,17 @@
 
 @misc{ github:background_segm,
     author = "OpenCV",
-    title = "Interfaz BackgroundSubtractorMOG2 (background_segm.hpp)",
+    title = "Interfaz BackgroundSubtractorMOG2 (background\_segm.hpp)",
     year = "2016",
-    url = {https://github.com/opencv/opencv/blob/master/modules/video/include/opencv2/video/background_segm.hpp},
+    url = {https://github.com/opencv/opencv/blob/master/modules/video/include/opencv2/video/background\_segm.hpp},
     note = "[Online; Accedido 12-Octubre-2016]"
 }
 
 @misc{ github:bgfg_gaussmix2,
     author = "OpenCV",
-    title = "Implementación BackgroundSubtractorMOG2 (bgfg_gaussmix2.cpp)",
+    title = "Implementación BackgroundSubtractorMOG2 (bgfg\_gaussmix2.cpp)",
     year = "2016",
-    url = {https://github.com/opencv/opencv/blob/master/modules/video/src/bgfg_gaussmix2.cpp},
+    url = {https://github.com/opencv/opencv/blob/master/modules/video/src/bgfg\_gaussmix2.cpp},
     note = "[Online; Accedido 12-Octubre-2016]"
 }
 
@@ -281,7 +281,7 @@
     author = "OpenCV",
     title = "cv::BackgroundSubtractorMOG2 Class Reference",
     year = "2016",
-    url = {http://docs.opencv.org/3.1.0/d7/d7b/classcv_1_1BackgroundSubtractorMOG2.html},
+    url = {http://docs.opencv.org/3.1.0/d7/d7b/classcv\_1\_1BackgroundSubtractorMOG2.html},
     note = "[Online; Accedido 12-Octubre-2016]"
 }
 
@@ -297,7 +297,7 @@
     author = "OpenCV",
     title = "Color conversions",
     year = "2016",
-    url = {http://docs.opencv.org/3.1.0/de/d25/imgproc_color_conversions.html},
+    url = {http://docs.opencv.org/3.1.0/de/d25/imgproc\_color\_conversions.html},
     note = "[Online; Accedido 18-Octubre-2016]"
 }
 
@@ -305,7 +305,7 @@
     author = "Wikipedia",
     title = "Gaussian blur --- Wikipedia{,} The Free Encyclopedia",
     year = "2016",
-    url = {https://en.wikipedia.org/w/index.php?title=Gaussian_blur&oldid=739396767},
+    url = {https://en.wikipedia.org/w/index.php?title=Gaussian\_blur&oldid=739396767},
     note = "[Online; Accedido 18-Octubre-2016]"
 }
 
@@ -323,7 +323,7 @@
     author = "OpenCV",
     title = "Structural Analysis and Shape Descriptors",
     year = "2016",
-    url = {docs.opencv.org/3.0-beta/modules/imgproc/doc/structural_analysis_and_shape_descriptors.html},
+    url = {docs.opencv.org/3.0-beta/modules/imgproc/doc/structural\_analysis\_and\_shape\_descriptors.html},
     note = "[Online; Accedido 19-Octubre-2016]"
 }
 
@@ -331,7 +331,7 @@
     author = "OpenCV",
     title = "Contours in OpenCV",
     year = "2016",
-    url = {http://docs.opencv.org/3.0-beta/doc/py_tutorials/py_imgproc/py_contours/py_table_of_contents_contours/py_table_of_contents_contours.html},
+    url = {http://docs.opencv.org/3.0-beta/doc/py\_tutorials/py\_imgproc/py\_contours/py\_table\_of\_contents\_contours/py\_table\_of\_contents\_contours.html},
     note = "[Online; Accedido 19-Octubre-2016]"
 }
 
