Convert to latex point 4 #124

--- a/docs/latex/tex/1_Introduccion.tex
+++ b/docs/latex/tex/1_Introduccion.tex
@@ -14,7 +14,7 @@ Uno de los indicadores que más información les proporciona es la
 actividad de vuelo de la colmena (número de abejas en vuelo a la entrada
 de la colmena en un determinado instante) \citep{art:campbell2008}. Este
 dato, junto con información previa de la colmena y conocimiento de las
-condiciones locales, permite conocer al apicultor el estado de la
+condiciones locales, permite al apicultor conocer el estado de la
 colmena con bastante seguridad, pudiendo determinar si esta necesita o
 no una intervención.
 
