--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -367,3 +367,41 @@
     note = "[Online; Accedido 25-Enero-2017]"
 }
 
+@misc{ pattern:mvp,
+    author = "Martin Fowler",
+	title = {GUI Architectures - MVC and MVP},
+    year = "2006",
+	url = {https://martinfowler.com/eaaDev/uiArchs.html},
+	note = "[Online; Accedido 22-Enero-2017]"
+}
+
+@misc{ pattern:repository,
+    author = "Martin Fowler, Edward Hieatt y Rob Mee",
+	title = {Repository Pattern},
+	url = {https://martinfowler.com/eaaCatalog/repository.html},
+	note = "[Online; Accedido 22-Enero-2017]"
+}
+
+@misc{ wiki:scrum,
+    author = "Wikipedia",
+	title = {Scrum (software development) --- Wikipedia{,} The Free Encyclopedia},
+    year = "2017",
+	url = {https://en.wikipedia.org/w/index.php?title=Scrum\_(software\_development)&oldid=761729658},
+	note = "[Online; Accedido 26-Enero-2017]"
+}
+
+@misc{ wiki:tdd,
+    author = "Wikipedia",
+	title = {Test-driven development --- Wikipedia{,} The Free Encyclopedia},
+    year = "2017",
+	url = {https://en.wikipedia.org/w/index.php?title=Test-driven\_development&oldid=758403369},
+    note = "[Online; Accedido 26-Enero-2017]"
+}
+
+@misc{ git:gitflow,
+    author = "Vincent Driessen",
+	title = {Gitflow - A successful Git branching model},
+    year = "2010",
+	url = {http://nvie.com/posts/a-successful-git-branching-model/},
+    note = "[Online; Accedido 26-Enero-2017]"
+}
