--- a/docs/latex/memoria.tex
+++ b/docs/latex/memoria.tex
@@ -17,7 +17,10 @@
 % Links
 \usepackage[colorlinks]{hyperref}
 \hypersetup{
-	allcolors = {red}
+	colorlinks,
+	linkcolor={green!40!black},
+	citecolor={blue!50!black},
+	urlcolor={blue!80!black}
 }
 
 % Ecuaciones
