Convert to latex point 5 #124

--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -178,6 +178,47 @@
 	year = {2015}
 }
 
+@book{ book:learning_cv,
+	title = {Learning {Image} {Processing} with {OpenCV}},
+	isbn = {978-1-78328-765-9},
+	abstract = {Exploit the amazing features of OpenCV to create powerful image processing applications through easy-to-follow examples About This BookLearn how to build full-fledged image processing applications using free tools and librariesTake advantage of cutting-edge image processing functionalities included in OpenCV v3Understand and optimize various features of OpenCV with the help of easy-to-grasp examplesWho This Book Is ForIf you are a competent C++ programmer and want to learn the tricks of image processing with OpenCV, then this book is for you. A basic understanding of image processing is required.What You Will Learn Create OpenCV programs with rich user interfaces  Grasp basic concepts and tasks in image processing such as image types, pixel access techniques, and arithmetic operations with images and histograms  Explore useful image processing techniques such as filtering, smoothing, sharpening, denoising, morphology, and geometrical transformations  Get to know handy algorithms such as inpainting and LUTs  Leverage the color manipulation features of OpenCV to optimize image processing  Discover how to process a video and the main techniques involved such as stabilization, stitching, and even superresolution  Understand the new computational photography module that covers high-dynamic range imaging, seamless cloning, decolorization, and non-photorealistic rendering  In DetailOpenCV, arguably the most widely used computer vision library, includes hundreds of ready-to-use imaging and vision functions and is used in both academia and enterprises.This book provides an example-based tour of OpenCV's main image processing algorithms. Starting with an exploration of library installation, wherein the library structure and basics of image and video reading/writing are covered, you will dive into image filtering and the color manipulation features of OpenCV with LUTs. You'll then be introduced to techniques such as inpainting and denoising to enhance images as well as the process of HDR imaging. Finally, you'll master GPU-based accelerations. By the end of this book, you will be able to create smart and powerful image processing applications with ease! All the topics are described with short, easy-to-follow examples.},
+	language = {English},
+	publisher = {Packt Publishing - ebooks Account},
+	author = {Garcia, Gloria Bueno and Suarez, Oscar Deniz and Aranda, Jose Luis Espinosa and Tercero, Jesus Salido and Gracia, Ismael Serrano},
+	month = mar,
+	year = {2015}
+}
+
+@misc{ course:android_beginners,
+	title = {Android {Development} for {Beginners}: {How} to {Make} {Apps} {\textbar} {Udacity}},
+	shorttitle = {Android {Development} for {Beginners}},
+	url = {https://www.udacity.com/course/android-development-for-beginners--ud837},
+	abstract = {Learn the basics of Android and Java programming. This class is designed for students who are new to programming and want to build Android apps.},
+	language = {English},
+	author = {Kuan, Katherine and Chawla, Kunal and Fujiwara, Lyla},
+	year = {2016},
+    note = "[Online; Accedido 5-Octubre-2016]"
+}
+
+@misc{ course:developing_android,
+	title = {Developing {Android} {Apps} {\textbar} {Udacity}},
+	url = {https://www.udacity.com/course/new-android-fundamentals--ud851},
+	abstract = {Learn how to develop Android applications from scratch using development best practices through a hands on course led by Google instructors.},
+	language = {English},
+	author = {Galpin, Dan and Fujiwara, Lyla and Meier, Reto and Samak, Asser and Williams, James and Camacho, Cezanne and Lustig, Michael},
+	year = {2016},
+    note = "[Online; Accedido 5-Octubre-2016]"
+}
+
+@misc{ course:testing,
+	title = {Android {Testing} {Codelab}},
+	url = {https://codelabs.developers.google.com/codelabs/android-testing/},
+	language = {English},
+	author = {Google Inc.},
+	year = {2016},
+    note = "[Online; Accedido 5-Octubre-2016]"
+}
+
 @misc{ programarfacil:detmov,
     author = "Luis del Valle Hernández",
     title = "Detección de movimiento con OpenCV y Python",
@@ -317,6 +358,17 @@
     author = {Kapur, Salil},
     month = jul,
     year = {2015}
+}
+
+@book{ book:android_opencv,
+	title = {Android {Application} {Programming} with {OpenCV} 3},
+	isbn = {978-1-78528-538-7},
+	abstract = {If you are a Java developer who is new to computer vision and would like to learn through application development, then this book is for you. You are expected to have a mobile device running Android 2.2 (Froyo) or greater, including a camera. Experience in Java is a must.},
+	language = {Inglés},
+	publisher = {Packt Publishing},
+	author = {Howse, Joseph},
+	month = jun,
+	year = {2015}
 }
 
 @misc{ opencv:find_contours,
