--- a/docs/latex/memoria.tex
+++ b/docs/latex/memoria.tex
@@ -1,10 +1,11 @@
 \documentclass[a4paper,11pt,oneside]{memoir}
 
 % Castellano
-\usepackage[spanish]{babel}
+\usepackage[spanish,es-tabla]{babel}
 \selectlanguage{spanish}
 \usepackage[utf8]{inputenc}
 \usepackage{placeins}
+\usepackage{float}
 
 \RequirePackage{booktabs}
 \RequirePackage[table]{xcolor}
